chore: update env example backend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,7 @@ JWT_ISSUER="<YOUR JWT ISSUER HERE>"
 JWT_EXP="<YOUR JWT EXP HERE>"
 RANDOM_TOKEN_LENGTH="<YOUR RANDOM TOKEN LENGTH HERE>"
 DEFAULT_GMAIL_APP_PASSWORD="<YOUR GMAIL APP PASSWORD HERE>"
-DEFAULT_ENDPOINT="<YOUR DEFAULT ENDPOINT HERE>"
+DEFAULT_ENDPOINT="<YOUR DEFAULT FRONTEND ENDPOINT HERE>"
 DEFAULT_USERNAME_EMAIL="<YOUR DEFAULT USERNAME EMAIL HERE>"
 DEFAULT_HOST_EMAIL="<YOUR DEFAULT HOST EMAIL HERE>"
 DEFAULT_PORT_EMAIL="<YOUR DEFAULT PORT EMAIL HERE>"
@@ -19,3 +19,6 @@ RANDOM_TOKEN_PASSWORD_LENGTH="<YOUR RANDOM TOKEN PASSWORD HERE>"
 VERIFICATION_LINK_BASE="<YOUR RANDOM TOKEN PASSWORD HERE>"
 RESET_LINK_BASE="<YOUR RANDOM TOKEN PASSWORD HERE>"
 JWT_REFRESH_TOKEN_EXP="<YOUR REFRESH TOKEN EXPIRED HERE>"
+RAJA_ONGKIR_API_KEY="<YOUR RAJA ONGKIR API KEY HERE>"
+RAJA_ONGKIR_COST_API_URL="https://api.rajaongkir.com/starter/cost"
+OPENCAGE_API_KEY="<YOUR OPENCAGE API KEY HERE>"
